--- a/resources/less/pages/documents-management.less
+++ b/resources/less/pages/documents-management.less
@@ -15,7 +15,7 @@
                 text-align: center;
             }
             .title {
-                max-width: 200px;
+                max-width: 150px;
                 
                 .title-container {
                     white-space: nowrap;
