--- a/resources/less/pages/login.less
+++ b/resources/less/pages/login.less
@@ -1,5 +1,5 @@
 .login {
-    .password-reset {
-        margin-left: 1rem;
+    .login-submit {
+        margin-right: 1rem;
     }
 }
